--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "bootcamp",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "The goal of this project is ",
+  "engines": {
+    "node": "16.13.2",
+    "yarn": "1.22.18"
+  },
+  "main": "server.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node server"
   },
   "repository": "git@github.com:juanjosevega99/full-stack.git",
   "author": "Juan Jose Vega <juanjosevegaquintero@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "16.0.1",
     "fastify": "^3.29.0"
   }
 }
